View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026426 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-07-14 08:54 | 2016-04-20 15:51 |
Reporter | emv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.9.0 | ||||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026426: Draft angle algorithm modifies input argument + the result of the operation have very large tolerance values | ||||
Description | Draft Angle operation increases dramatically the tolerance values of the sub-shapes of input argument. The tolerance values of the sub-shapes of the result of the operation are very large. | ||||
Steps To Reproduce | restore prism_shape.brep b1 tolerance b1 # Tolerance MAX=2.0000099999999999e-007 MIN=9.9999999999999995e-008 # FACE : MAX=9.9999999999999995e-008 MIN=9.9999999999999995e-008 # EDGE : MAX=2.0000099999999999e-007 MIN=9.9999999999999995e-008 # VERTEX : MAX=2.0000099999999999e-007 MIN=1.0246950765959601e-007 explode b1 f depouille r b1 0 0 -1 b1_1 -10 0 0 -40 0 0 1 tolerance b1 # Tolerance MAX=5.289809421253965 MIN=9.9999999999999995e-008 # FACE : MAX=9.9999999999999995e-008 MIN=9.9999999999999995e-008 # EDGE : MAX=2.0000099999999999e-007 MIN=9.9999999999999995e-008 # VERTEX : MAX=5.289809421253965 MIN=1.0246950765959601e-007 tolerance r # Tolerance MAX=5.289809421253965 MIN=9.9999999999999995e-008 # FACE : MAX=9.9999999999999995e-008 MIN=9.9999999999999995e-008 # EDGE : MAX=5.2898094212539633 MIN=9.9999999999999995e-008 # VERTEX : MAX=5.289809421253965 MIN=1.0246950765959601e-007 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug26426 | ||||
|
prism_shape.brep (7,136 bytes) |
|
This issue is one more case for the general task "Non-destructive principle in algorithms". |
|
Branch CR26426 has been created by ifv. SHA-1: cc7da2a71c26239a8c71c596ad098cfc42217be6 Detailed log of new commits: Author: ifv Date: Fri Jul 17 09:43:21 2015 +0300 0026426: Draft angle algorithm modifies input argument + the result of the operation have very large tolerance values |
|
Please, review branch CR26426 |
|
Reviewed. |
|
Dear BugMaster, Branch CR26426 from occt git-repository (and IR-2015-07-09 from products git-repository) was compiled on Linux and Windows platforms and tested. SHA-1: cc7da2a71c26239a8c71c596ad098cfc42217be6 Number of compiler warnings: occt component: Linux: 24 (24 on master) Windows: 0 (0 on master) products component: Linux: 37 (37 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR26426-IR-2015-07-09-occt-64/Debian70-64/summary.html http://occt-tests/CR26426-IR-2015-07-09-occt-64/Windows-64-VC10/summary.html bugs modalg_2 bug422_1, bug422_2 bugs modalg_4 bug712_1 draft angle A9, B1, D9, E6, E7, E9, F1, F2, F3, F4, F5, F7, F8, G1, G3, G6, G9, H1, H2, H3, H5, H6, H7, I2, I3, I5, I6, I9, J1, J2, J3, K1, K2, K3, K4, K5, K7, K8, K9, L8, M2, M3, M4 |
|
Branch CR26426 has been updated forcibly by ifv. SHA-1: 86c44c9568c2110863a5c7a04e2bc587b2ea4a69 |
|
Branch CR26426 has been updated forcibly by ifv. SHA-1: 26cae3f67fee726026d4f7927df30fe3e06bb066 |
|
Branch CR26426 has been updated forcibly by ifv. SHA-1: 43d791014193d6a213db3e010a2a34178fd462f2 |
|
Branch CR26426 has been updated forcibly by ifv. SHA-1: 97e9a74b698da1f4089a8f734baa8e2fb3c7812b |
|
CR26426 is updated and ready to review and test |
|
Remarks: src\BRepOffsetAPI\BRepOffsetAPI_DraftAngle.hxx: - the following comments have duplicate sentences: //! Exceptions //! Standard_NoSuchObject if S is not the initial shape or //! a subshape of the initial shape to which the //! transformation has been applied. Raises NoSuchObject from Standard //! if S is not the initial shape or a sub-shape //! of the initial shape. |
|
Branch CR26426 has been updated forcibly by ifv. SHA-1: dcb9293ddf68e22878381890fb22a89afae81386 |
|
Branch CR26426 is updated according to note 45256 and ready for tests |
|
Dear BugMaster, Branch CR26426 from occt git-repository (and master from products git-repository) was compiled on Linux and Windows platforms and tested. SHA-1: dcb9293ddf68e22878381890fb22a89afae81386 Number of compiler warnings: occt component: Linux: 15 (15 on master) Windows: 0 (0 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR26426-master-occt-64/Debian70-64/summary.html draft angle G1, J3 Testing on Linux: Total MEMORY difference: 91159555 / 91940613 [-0.85%] Total CPU difference: 17848.559999999103 / 17715.28999999897 [+0.75%] Testing on Windows: Total MEMORY difference: 57135643 / 57144818 [-0.02%] Total CPU difference: 16435.500955098993 / 16584.559910599328 [-0.90%] |
|
Branch CR26426 has been updated forcibly by ifv. SHA-1: 1c5a4487e59e874981197a69019162bb6f106bc3 |
|
Branch CR26426 was updated in order to merge fixes for 26426 and 26396 |
|
Branch CR26426 was updated in order to merge fixes for 26426 and 26396 Please test it. |
|
Dear BugMaster, Branch CR26426 from occt git-repository (and master from products git-repository) was compiled on Linux, Windows and MacOS platforms and tested. SHA-1: 1c5a4487e59e874981197a69019162bb6f106bc3 Number of compiler warnings: occt component: Linux: 8 (8 on master) Windows: 0 (0 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: http://occt-tests/CR26426-master-occt-64/Debian70-64/summary.html draft angle G1, G6, J2, J3 Testing on Linux: Total MEMORY difference: 92096228 / 92266300 [-0.18%] Total CPU difference: 19666.079999999798 / 19656.73999999973 [+0.05%] Testing on Windows: Total MEMORY difference: 58026168 / 58040693 [-0.03%] Total CPU difference: 18007.60103259898 / 17972.407206998967 [+0.20%] |
|
Dear ifv, Branch CR26426 has been rejected due to: - regressions/differences/improvement |
|
Branch CR26426 has been updated forcibly by ifv. SHA-1: 846507b6717861479578b7d477e7fbc1551c05a3 |
|
Branch CR26426 was updated to fix regressions, please test |
|
Branch CR26426 has been updated forcibly by apv. SHA-1: b176357027aa5a1c5b55d794ac3a6bcd9e4b0f5a |
|
Branch CR26426 has been rebased on the current master |
|
Branch CR26426 has been updated by apv. SHA-1: 8dcea02a5fc40a2e3775162d442f0a3feb8fb1ef Detailed log of new commits: Author: apv Date: Tue Oct 27 15:01:01 2015 +0300 Test-case for issue 0026426 |
|
Dear BugMaster, Branch CR26426 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: b176357027aa5a1c5b55d794ac3a6bcd9e4b0f5a Number of compiler warnings: occt component: Linux: 1 (1 on master) Windows: 0 (0 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) Regressions/Differences: Not detected Testing cases: bugs modalg_6 bug26426 - OK http://occt-tests/CR26426-master-occt-64/Debian70-64/bugs/modalg_6/bug26426.html http://occt-tests/CR26426-master-occt-64/Windows-64-VC10/bugs/modalg_6/bug26426.html Testing on Linux: Total MEMORY difference: 92196894 / 92336834 [-0.15%] Total CPU difference: 19725.799999999763 / 19731.589999999687 [-0.03%] Testing on Windows: Total MEMORY difference: 58096060 / 58090849 [+0.01%] Total CPU difference: 18472.047209798835 / 18494.870156099 [-0.12%] |
|
Branch CR26426 has been deleted by kgv. SHA-1: 8dcea02a5fc40a2e3775162d442f0a3feb8fb1ef |
occt: master 345d3056 2015-07-17 06:43:21 Committer: bugmaster Details Diff |
0026426: Draft angle algorithm modifies input argument + the result of the operation have very large tolerance values Test-case for issue 0026426 |
Affected Issues 0026426 |
|
mod - src/BRepOffsetAPI/BRepOffsetAPI_DraftAngle.cxx | Diff File | ||
mod - src/BRepOffsetAPI/BRepOffsetAPI_DraftAngle.hxx | Diff File | ||
mod - src/Draft/Draft_Modification.cxx | Diff File | ||
mod - src/Draft/Draft_Modification_1.cxx | Diff File | ||
add - tests/bugs/modalg_6/bug26426 | Diff File | ||
mod - tests/draft/angle/G2 | Diff File | ||
mod - tests/draft/angle/K5 | Diff File | ||
mod - tests/draft/angle/K7 | Diff File | ||
mod - tests/draft/angle/M2 | Diff File | ||
mod - tests/draft/angle/M4 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-07-14 08:54 | emv | New Issue | |
2015-07-14 08:54 | emv | Assigned To | => msv |
2015-07-14 08:54 | emv | File Added: prism_shape.brep | |
2015-07-14 09:23 | msv | Assigned To | msv => ifv |
2015-07-14 09:29 | msv | Note Added: 0042987 | |
2015-07-14 09:35 | ifv | Status | new => assigned |
2015-07-14 10:13 | ifv | Relationship added | parent of 0026427 |
2015-07-17 10:01 | git | Note Added: 0043144 | |
2015-07-17 10:03 | ifv | Note Added: 0043145 | |
2015-07-17 10:03 | ifv | Assigned To | ifv => msv |
2015-07-17 10:03 | ifv | Status | assigned => resolved |
2015-07-17 10:17 | msv | Note Added: 0043146 | |
2015-07-17 10:17 | msv | Assigned To | msv => bugmaster |
2015-07-17 10:17 | msv | Status | resolved => reviewed |
2015-07-17 17:19 |
|
Assigned To | bugmaster => apv |
2015-07-21 17:09 |
|
Note Added: 0043241 | |
2015-07-21 17:09 |
|
Assigned To | apv => ifv |
2015-07-21 17:09 |
|
Status | reviewed => assigned |
2015-07-31 14:19 | git | Note Added: 0043750 | |
2015-09-03 15:53 | git | Note Added: 0045013 | |
2015-09-07 12:19 | git | Note Added: 0045129 | |
2015-09-08 12:58 | git | Note Added: 0045208 | |
2015-09-08 13:01 | ifv | Note Added: 0045210 | |
2015-09-08 13:01 | ifv | Assigned To | ifv => msv |
2015-09-08 13:01 | ifv | Status | assigned => resolved |
2015-09-08 18:04 | msv | Note Added: 0045256 | |
2015-09-08 18:04 | msv | Assigned To | msv => ifv |
2015-09-08 18:04 | msv | Status | resolved => assigned |
2015-09-08 18:25 | git | Note Added: 0045258 | |
2015-09-08 18:27 | ifv | Status | assigned => resolved |
2015-09-08 18:28 | ifv | Note Added: 0045259 | |
2015-09-08 18:28 | ifv | Assigned To | ifv => bugmaster |
2015-09-08 18:28 | ifv | Status | resolved => reviewed |
2015-09-09 12:53 |
|
Assigned To | bugmaster => apv |
2015-09-10 16:15 |
|
Note Added: 0045434 | |
2015-09-10 16:15 |
|
Assigned To | apv => ifv |
2015-09-10 16:15 |
|
Status | reviewed => assigned |
2015-10-21 14:05 | git | Note Added: 0047276 | |
2015-10-21 14:09 | ifv | Note Added: 0047277 | |
2015-10-21 14:09 | ifv | Assigned To | ifv => msv |
2015-10-21 14:09 | ifv | Status | assigned => resolved |
2015-10-21 14:09 | ifv | Note Added: 0047278 | |
2015-10-21 14:09 | ifv | Assigned To | msv => bugmaster |
2015-10-21 14:09 | ifv | Status | resolved => reviewed |
2015-10-21 16:15 |
|
Assigned To | bugmaster => apv |
2015-10-22 14:49 |
|
Note Added: 0047338 | |
2015-10-22 14:49 |
|
Assigned To | apv => ifv |
2015-10-22 14:49 |
|
Status | reviewed => assigned |
2015-10-22 14:50 |
|
Note Added: 0047339 | |
2015-10-26 14:25 | git | Note Added: 0047438 | |
2015-10-26 14:28 | ifv | Assigned To | ifv => msv |
2015-10-26 14:28 | ifv | Status | assigned => resolved |
2015-10-26 14:29 | ifv | Note Added: 0047442 | |
2015-10-26 14:29 | ifv | Assigned To | msv => bugmaster |
2015-10-26 14:29 | ifv | Status | resolved => reviewed |
2015-10-26 14:39 |
|
Assigned To | bugmaster => apv |
2015-10-26 17:45 | git | Note Added: 0047454 | |
2015-10-26 17:45 |
|
Note Added: 0047455 | |
2015-10-27 15:01 | git | Note Added: 0047487 | |
2015-10-27 15:01 |
|
Test case number | => bugs modalg_6 bug26426 |
2015-10-27 15:54 |
|
Note Added: 0047493 | |
2015-10-27 15:54 |
|
Assigned To | apv => bugmaster |
2015-10-27 15:54 |
|
Status | reviewed => tested |
2015-10-30 16:00 | bugmaster | Changeset attached | => occt master 345d3056 |
2015-10-30 16:00 | bugmaster | Status | tested => verified |
2015-10-30 16:00 | bugmaster | Resolution | open => fixed |
2015-12-07 16:16 | bugmaster | Target Version | 7.1.0 => 7.0.0 |
2016-02-16 17:13 | isn | Relationship added | child of 0027166 |
2016-04-17 14:30 | git | Note Added: 0053179 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |