0026426: Draft angle algorithm modifies input argument + the result of the operation have very large tolerance values

Test-case for issue #26426