src/BRepOffsetAPI/BRepOffsetAPI_DraftAngle.hxx
@@ -22,6 +22,7 @@
 #include <Standard_Handle.hxx>
 
 #include <TopTools_ListOfShape.hxx>
+#include <TopTools_DataMapOfShapeShape.hxx>
 #include <BRepBuilderAPI_ModifyShape.hxx>
 #include <Standard_Real.hxx>
 #include <Standard_Boolean.hxx>
@@ -185,6 +186,14 @@ public:
   //! <S>.
   Standard_EXPORT virtual const TopTools_ListOfShape& Modified (const TopoDS_Shape& S) Standard_OVERRIDE;
 
+  //! Returns the modified shape corresponding to <S>.
+  //! S can correspond to the entire initial shape or to its subshape.
+  //! Raises exceptions
+  //! Standard_NoSuchObject if S is not the initial shape or
+  //! a subshape of the initial shape to which the
+  //! transformation has been applied. 
+  Standard_EXPORT virtual TopoDS_Shape ModifiedShape (const TopoDS_Shape& S) const Standard_OVERRIDE;
+
 
 
 
@@ -196,10 +205,9 @@ protected:
 
 private:
 
+  Standard_EXPORT void CorrectVertexTol();
 
-
-  TopTools_ListOfShape myModifiedShapes;
-
+  TopTools_DataMapOfShapeShape myVtxToReplace;
 
 };
 
